--- a/static-job-clon/static.html
+++ b/static-job-clon/static.html
@@ -65,95 +65,87 @@
                 </article>   
             </article>
             <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
+                <div><a href="#" class="align-self-center"><img src="./images/account.svg"></a></div> 
                 <article class="flex-col ">
                     <div class="flex-row">
-                        <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
+                        <button class="btn btn-link text-decoration-none text-desaDc">Account</button>
                         <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
                         <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
                     </div>
-                    <h1>Senior Frontend Developer</h1>
+                    <h1>Junior Frontend Developer</h1>
                     <div class="flex-row">
-                        <p class="text-muted">1d ago</p>
-                        <p class="text-muted">Full Time </p>
+                        <p class="text-muted">2d ago</p>
+                        <p class="text-muted">Part Time </p>
                         <p class="text-muted">USA only</p>
                     </div>
                 </article>
                 <article class="d-flex justify-content-center d-flex align-items-center">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Junior</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">React</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Sass</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
+                </article>   
+            </article>
+            <article class="flex-row bg-white m-3 p-2">
+                <div><a href="#" class="align-self-center"><img src="./images/myhome.svg"></a></div> 
+                <article class="flex-col ">
+                    <div class="flex-row">
+                        <button class="btn btn-link text-decoration-none text-desaDc">MyHome</button>                    
+                    </div>
+                    <h1>Junior Frontend Developer</h1>
+                    <div class="flex-row">
+                        <p class="text-muted">5d ago</p>
+                        <p class="text-muted">Contact </p>
+                        <p class="text-muted">USA only</p>
+                    </div>
+                </article>
+                <article class="d-flex justify-content-center d-flex align-items-center">
+                    <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Junior</button></div>                
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
             <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
+                <div><a href="#" class="align-self-center"><img src="./images/loop-studios.svg"></a></div> 
                 <article class="flex-col ">
                     <div class="flex-row">
-                        <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
-                        <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
-                        <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
+                        <button class="btn btn-link text-decoration-none text-desaDc">Loop Studios</button>                    
                     </div>
                     <h1>Senior Frontend Developer</h1>
                     <div class="flex-row">
                         <p class="text-muted">1d ago</p>
                         <p class="text-muted">Full Time </p>
-                        <p class="text-muted">USA only</p>
+                        <p class="text-muted">Wordwide</p>
                     </div>
                 </article>
                 <article class="d-flex justify-content-center d-flex align-items-center">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Midweight</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Sass</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Ruby</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
             <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
+                <div><a href="#" class="align-self-center"><img src="./images/faceit.svg"></a></div> 
                 <article class="flex-col ">
                     <div class="flex-row">
-                        <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
-                        <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
-                        <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
+                        <button class="btn btn-link text-decoration-none text-desaDc">Facelt</button>                    
                     </div>
-                    <h1>Senior Frontend Developer</h1>
+                    <h1>Junio Backend Developer</h1>
                     <div class="flex-row">
-                        <p class="text-muted">1d ago</p>
+                        <p class="text-muted">2w ago</p>
                         <p class="text-muted">Full Time </p>
-                        <p class="text-muted">USA only</p>
+                        <p class="text-muted">Wordwide</p>
                     </div>
                 </article>
                 <article class="d-flex justify-content-center d-flex align-items-center">
-                    <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
-                </article>   
-            </article>
-            <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
-                <article class="flex-col ">
-                    <div class="flex-row">
-                        <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
-                        <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
-                        <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
-                    </div>
-                    <h1>Senior Frontend Developer</h1>
-                    <div class="flex-row">
-                        <p class="text-muted">1d ago</p>
-                        <p class="text-muted">Full Time </p>
-                        <p class="text-muted">USA only</p>
-                    </div>
-                </article>
-                <article class="d-flex justify-content-center d-flex align-items-center">
-                    <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
+                    <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Backend</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Junior</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Ruby</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">RoR</button></div>                
                 </article>   
             </article>
             <article class="flex-row bg-white m-3 p-2">
