--- a/static-job-clon/static.html
+++ b/static-job-clon/static.html
@@ -149,94 +149,86 @@
                 </article>   
             </article>
             <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
+                <div><a href="#" class="align-self-center"><img src="./images/shortly.svg"></a></div> 
                 <article class="flex-col ">
                     <div class="flex-row">
-                        <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
-                        <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
-                        <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
+                        <button class="btn btn-link text-decoration-none text-desaDc">Shorty</button>                
                     </div>
-                    <h1>Senior Frontend Developer</h1>
+                    <h1>Junior Developer</h1>
                     <div class="flex-row">
-                        <p class="text-muted">1d ago</p>
+                        <p class="text-muted">2w ago</p>
                         <p class="text-muted">Full Time </p>
-                        <p class="text-muted">USA only</p>
+                        <p class="text-muted">Wordwide</p>
                     </div>
                 </article>
                 <article class="d-flex justify-content-center d-flex align-items-center">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Junior</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Sass</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
             <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
+                <div><a href="#" class="align-self-center"><img src="./images/insure.svg"></a></div> 
                 <article class="flex-col ">
                     <div class="flex-row">
-                        <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
-                        <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
-                        <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
+                        <button class="btn btn-link text-decoration-none text-desaDc">Insure</button>                    
                     </div>
-                    <h1>Senior Frontend Developer</h1>
+                    <h1>Junior Frontend Developer</h1>
                     <div class="flex-row">
-                        <p class="text-muted">1d ago</p>
+                        <p class="text-muted">2w ago</p>
                         <p class="text-muted">Full Time </p>
                         <p class="text-muted">USA only</p>
                     </div>
                 </article>
                 <article class="d-flex justify-content-center d-flex align-items-center">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Junior</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Vue</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Sass</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
             <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
+                <div><a href="#" class="align-self-center"><img src="./images/eyecam-co.svg"></a></div> 
                 <article class="flex-col ">
                     <div class="flex-row">
-                        <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
-                        <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
-                        <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
+                        <button class="btn btn-link text-decoration-none text-desaDc">Eyecam Co.</button>                    
                     </div>
-                    <h1>Senior Frontend Developer</h1>
+                    <h1>Full Stack Developer</h1>
                     <div class="flex-row">
-                        <p class="text-muted">1d ago</p>
+                        <p class="text-muted">3w ago</p>
                         <p class="text-muted">Full Time </p>
-                        <p class="text-muted">USA only</p>
+                        <p class="text-muted">Wordwide</p>
                     </div>
                 </article>
                 <article class="d-flex justify-content-center d-flex align-items-center">
-                    <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
+                    <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Fullstack</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Midweigtgh</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Django</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Python</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
             <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
+                <div><a href="#" class="align-self-center"><img src="./images/the-air-filter-company.svg"></a></div> 
                 <article class="flex-col ">
                     <div class="flex-row">
-                        <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
-                        <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
-                        <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
+                        <button class="btn btn-link text-decoration-none text-desaDc">The Air Filter Company</button>                    
                     </div>
-                    <h1>Senior Frontend Developer</h1>
+                    <h1>Front-end Dev</h1>
                     <div class="flex-row">
-                        <p class="text-muted">1d ago</p>
+                        <p class="text-muted">1ma ago</p>
                         <p class="text-muted">Full Time </p>
-                        <p class="text-muted">USA only</p>
+                        <p class="text-muted">Wordwide</p>
                     </div>
                 </article>
                 <article class="d-flex justify-content-center d-flex align-items-center">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
-                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">CSS</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Junior</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">React</button></div>
+                    <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Sass</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
