--- a/html/static-job-clon/static.html
+++ b/html/static-job-clon/static.html
@@ -12,17 +12,19 @@
     <link href="/styles/main.css" rel="stylesheet">
 </head>
 <body class="bg-liGraCy">
+    <head>
+        <section class="bg-desaDc">
+            <img src="./images/bg-header-desktop.svg">
+        </section>
+    </head>
     <main>
-        <head>
-            <section class="bg-desaDc">
-                <img src="./images/bg-header-desktop.svg">
-            </section>
-        </head>
         <section class="d-flex flex-column align-items-center justify-content-center">
-            <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a></div> 
-                <article class="flex-col ">
-                    <div class="flex-row">
+            <article class="flex-row bg-white m-3 p-2 w-75 d-flex">
+                <div class="d-flex align-items-center">
+                    <a href="#" class="align-self-center"><img src="./images/photosnap.svg"></a>
+                </div> 
+                <article class="flex-col d-flex flex-grow-1">
+                    <div class="flex-row d-flex">
                         <button class="btn btn-link text-decoration-none text-desaDc">Photosnap</button>
                         <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
                         <button class="btn btn-link bg-veDark text-white rounded-pill text-decoration-none"> FEATURED</button>
@@ -34,7 +36,7 @@
                         <p class="text-muted">USA only</p>
                     </div>
                 </article>
-                <article class="d-flex justify-content-center d-flex align-items-center">
+                <article class="d-flex  align-items-center ">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Frontend</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Senior</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">HTML</button></div>
@@ -42,9 +44,11 @@
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/manage.svg"></a></div> 
-                <article class="flex-col ">
+            <article class="flex-row d-flex bg-white m-3 p-2 w-75">
+                <div class="d-flex align-items-center">
+                    <a href="#" class="align-self-center"><img src="./images/manage.svg"></a>
+                </div> 
+                <article class="flex-col d-flex flex-grow-1">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">Manage</button>
                         <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
@@ -57,16 +61,18 @@
                         <p class="text-muted">USA only</p>
                     </div>
                 </article>
-                <article class="d-flex justify-content-center d-flex align-items-center">
+                <article class="d-flex justify-content-center d-flex align-items-center ">
                     <div><button type="button" class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Fullstack</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Midweight</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">Python</button></div>
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">React</button></div>            
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/account.svg"></a></div> 
-                <article class="flex-col ">
+            <article class="flex-row bg-white m-3 p-2 w-75">
+                <div class="d-flex align-items-center">
+                    <a href="#" class="align-self-center"><img src="./images/account.svg"></a>
+                </div> 
+                <article class="flex-col d-flex flex-grow-1">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">Account</button>
                         <button class="btn btn-link bg-desaDc text-white rounded-pill text-decoration-none"> NEW</button>
@@ -87,9 +93,11 @@
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/myhome.svg"></a></div> 
-                <article class="flex-col ">
+            <article class="flex-row bg-white m-3 p-2 w-75">
+                <div class="d-flex align-items-center">
+                    <a href="#" class="align-self-center"><img src="./images/myhome.svg"></a>
+                </div> 
+                <article class="flex-col d-flex flex-grow-1">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">MyHome</button>                    
                     </div>
@@ -107,9 +115,11 @@
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/loop-studios.svg"></a></div> 
-                <article class="flex-col ">
+            <article class="flex-row bg-white m-3 p-2 w-75">
+                <div class="d-flex align-items-center">
+                    <a href="#" class="align-self-center"><img src="./images/loop-studios.svg"></a>
+                </div> 
+                <article class="flex-col d-flex flex-grow-1">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">Loop Studios</button>                    
                     </div>
@@ -128,9 +138,11 @@
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/faceit.svg"></a></div> 
-                <article class="flex-col ">
+            <article class="flex-row bg-white m-3 p-2 w-75">
+                <div class="d-flex align-items-center">
+                    <a href="#" class="align-self-center"><img src="./images/faceit.svg"></a>
+                </div> 
+                <article class="flex-col d-flex flex-grow-1">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">Facelt</button>                    
                     </div>
@@ -148,9 +160,11 @@
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 text-desaDc">RoR</button></div>                
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/shortly.svg"></a></div> 
-                <article class="flex-col ">
+            <article class="flex-row bg-white m-3 p-2 w-75">
+                <div class="d-flex align-items-center">
+                    <a href="#" class="align-self-center"><img src="./images/shortly.svg"></a>
+                </div> 
+                <article class="flex-col d-flex flex-grow-1">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">Shorty</button>                
                     </div>
@@ -169,9 +183,11 @@
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/insure.svg"></a></div> 
-                <article class="flex-col ">
+            <article class="flex-row bg-white m-3 p-2 w-75">
+                <div class="d-flex align-items-center">
+                    <a href="#" class="align-self-center"><img src="./images/insure.svg"></a>
+                </div> 
+                <article class="flex-col d-flex flex-grow-1">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">Insure</button>                    
                     </div>
@@ -190,9 +206,11 @@
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/eyecam-co.svg"></a></div> 
-                <article class="flex-col ">
+            <article class="flex-row bg-white m-3 p-2 w-75">
+                <div class="d-flex align-items-center">
+                    <a href="#" class="align-self-center"><img src="./images/eyecam-co.svg"></a>
+                </div> 
+                <article class="flex-col d-flex flex-grow-1">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">Eyecam Co.</button>                    
                     </div>
@@ -211,9 +229,11 @@
                     <div><button class="btn btn-link bg-liGraCy text-decoration-none m-3 p-2 text-desaDc">JavaScript</button></div>
                 </article>   
             </article>
-            <article class="flex-row bg-white m-3 p-2">
-                <div><a href="#" class="align-self-center"><img src="./images/the-air-filter-company.svg"></a></div> 
-                <article class="flex-col ">
+            <article class="flex-row bg-white m-3 p-2 w-75">
+                <div class="d-flex align-items-center">
+                    <a href="#" class="align-self-center"><img src="./images/the-air-filter-company.svg"></a>
+                </div> 
+                <article class="flex-col d-flex flex-grow-1">
                     <div class="flex-row">
                         <button class="btn btn-link text-decoration-none text-desaDc">The Air Filter Company</button>                    
                     </div>
